--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
 		</div>
 	</section>
 	<!-- /.packages -->
-	<section class="newsletter">		
+	<section class="newsletter">
 		<div class="container">
 			<div class="newsletter__text">
 				<span class="newsletter__text-subscribe">subscribe to our</span>
 				<h2 class="newsletter__text-title">Newsletter</h2>
 			</div>
 				<form action="send-2.php" method="post" class="subscribe newsletter__subscribe">
-					<input type="email" name="email" class="subscribe__input" placeholder="Your email address">
+					<input type="email" name="email" class="subscribe__input" placeholder="Your email address" required>
 					<button class="subscribe__button">Send</button>
 				</form>
 		</div>
@@ -558,8 +558,8 @@
 				<div class="footer__message">
 					<h3 class="footer__title">Send us message</h3>
 					<form action="send.php" method="POST" class="footer__form">
-						<input type="text" name="name" class="footer__input" placeholder="Your Full Name*">
-						<input type="tel" name="phone" class="footer__input" placeholder="Phone Number*">
+						<input type="text" name="name" class="footer__input" placeholder="Your Full Name*" required>
+						<input type="tel" name="phone" class="footer__input" placeholder="Phone Number*" required>
 						<textarea name="message" class="footer__textarea" placeholder="Message"></textarea>
 						<span class="footer__required">* Required Fields</span>
 						<button class="footer__button">Send</button>
@@ -587,9 +587,9 @@
 			</a>
 			<h3 class="modal__title">Send us feedback</h3>
 			<form action="send.php" method="POST" class="modal__form">
-				<input type="text" name="name" class="modal__input" placeholder="Your Full Name*">
-				<input type="tel" name="phone" class="modal__input" placeholder="Phone Number*">
-				<input type="email" name="email" class="modal__input" placeholder="Email*">
+				<input type="text" name="name" class="modal__input" placeholder="Your Full Name*" required>
+				<input type="tel" name="phone" class="modal__input" placeholder="Phone Number*" required>
+				<input type="email" name="email" class="modal__input" placeholder="Email*" required>
 				<textarea name="message" class="modal__textarea" placeholder="Message"></textarea>
 				<span class="modal__required">* Required Fields</span>
 				<button class="modal__button">Send</button>
@@ -607,9 +607,9 @@
 			</a>
 				<h3 class="modal__title">Booking</h3>
 				<form action="send.php" method="POST" class="modal__form">
-					<input type="text" name="name" class="modal__input" placeholder="Your Full Name*">
-					<input type="tel" name="phone" class="modal__input" placeholder="Phone Number*">
-					<input type="email" name="email" class="modal__input" placeholder="Email*">
+					<input type="text" name="name" class="modal__input" placeholder="Your Full Name*" required>
+					<input type="tel" name="phone" class="modal__input" placeholder="Phone Number*" required>
+					<input type="email" name="email" class="modal__input" placeholder="Email*" required>
 					<textarea name="message" class="modal__textarea" placeholder="Message"></textarea>
 					<span class="modal__required">* Required Fields</span>
 					<button class="modal__button">Send</button>
